rust/schema/tests/snapshots/patch__section-add-paras.snap
---
source: rust/schema/tests/patch.rs
expression: "Fixture { old, new, ops, merged }"
---
old:
  type: Article
  authors:
    - type: AuthorRole
      author:
        type: Person
        givenNames:
          - Alice
      roleName: Importer
  content:
    - type: Section
      content:
        - type: Heading
          level: 1
          content:
            - type: Text
              value:
                string: Header 1
                authorship:
                  - - 0
                    - 8
          authors:
            - type: AuthorRole
              author:
                type: Person
                givenNames:
                  - Alice
              roleName: Importer
        - type: Paragraph
          content:
            - type: Text
              value:
                string: Text.
                authorship:
                  - - 0
                    - 5
          authors:
            - type: AuthorRole
              author:
                type: Person
                givenNames:
                  - Alice
              roleName: Importer
        - type: Section
          content:
            - type: Heading
              level: 2
              content:
                - type: Text
                  value:
                    string: Sub section
                    authorship:
                      - - 0
                        - 11
              authors:
                - type: AuthorRole
                  author:
                    type: Person
                    givenNames:
                      - Alice
                  roleName: Importer
            - type: Paragraph
              content:
                - type: Text
                  value:
                    string: This is in the sub section.
                    authorship:
                      - - 0
                        - 27
              authors:
                - type: AuthorRole
                  author:
                    type: Person
                    givenNames:
                      - Alice
                  roleName: Importer
          authors:
            - type: AuthorRole
              author:
                type: Person
                givenNames:
                  - Alice
              roleName: Importer
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
new:
  type: Article
  content:
    - type: Section
      content:
        - type: Heading
          level: 1
          content:
            - type: Text
              value: Header 1
        - type: Paragraph
          content:
            - type: Text
              value: Text.
        - type: Paragraph
          content:
            - type: Text
              value: More text.
        - type: Section
          content:
            - type: Heading
              level: 2
              content:
                - type: Text
                  value: Sub section
            - type: Paragraph
              content:
                - type: Text
                  value: This is in the sub section.
        - type: Paragraph
          content:
            - type: Text
              value: End text.
merged:
  type: Article
  authors:
    - type: AuthorRole
      author:
        type: Person
        givenNames:
          - Alice
      roleName: Importer
    - type: AuthorRole
      author:
        type: Person
        givenNames:
          - Bob
      roleName: Writer
  content:
    - type: Section
      content:
        - type: Heading
          level: 1
          content:
            - type: Text
              value:
                string: Header 1
                authorship:
                  - - 0
                    - 8
          authors:
            - type: AuthorRole
              author:
                type: Person
                givenNames:
                  - Alice
              roleName: Importer
        - type: Paragraph
          content:
            - type: Text
              value:
                string: Text.
                authorship:
                  - - 0
                    - 5
          authors:
            - type: AuthorRole
              author:
                type: Person
                givenNames:
                  - Alice
              roleName: Importer
        - type: Paragraph
          content:
            - type: Text
              value:
                string: More text.
                authorship:
                  - - 0
                    - 10
          authors:
            - type: AuthorRole
              author:
                type: Person
                givenNames:
                  - Bob
              roleName: Writer
        - type: Section
          content:
            - type: Heading
              level: 2
              content:
                - type: Text
                  value:
                    string: Sub section
                    authorship:
                      - - 0
                        - 11
              authors:
                - type: AuthorRole
                  author:
                    type: Person
                    givenNames:
                      - Alice
                  roleName: Importer
            - type: Paragraph
              content:
                - type: Text
                  value:
                    string: This is in the sub section.
                    authorship:
                      - - 0
                        - 27
              authors:
                - type: AuthorRole
                  author:
                    type: Person
                    givenNames:
                      - Alice
                  roleName: Importer
          authors:
            - type: AuthorRole
              author:
                type: Person
                givenNames:
                  - Alice
              roleName: Importer
        - type: Paragraph
          content:
            - type: Text
              value:
                string: End text.
                authorship:
                  - - 0
                    - 9
          authors:
            - type: AuthorRole
              author:
                type: Person
                givenNames:
                  - Bob
              roleName: Writer
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Bob
          roleName: Writer
ops:
  - - - content
      - 0
      - content
    - Insert:
        - - 2
          - type: Paragraph
            content:
              - type: Text
                value: More text.
        - - 4
          - type: Paragraph
            content:
              - type: Text
                value: End text.
