rust/schema/tests/snapshots/patch__table-change-content.snap
---
source: rust/schema/tests/patch.rs
expression: "Fixture { old, new, ops: patch.ops, merged }"
---
old:
  type: Article
  authors:
    - type: AuthorRole
      author:
        type: Person
        givenNames:
          - Alice
      roleName: Importer
  provenance:
    - type: ProvenanceCount
      provenanceCategory: Hw
      characterCount: 57
      characterPercent: 100
  content:
    - type: Table
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
      provenance:
        - type: ProvenanceCount
          provenanceCategory: Hw
          characterCount: 57
          characterPercent: 100
      rows:
        - type: TableRow
          cells:
            - type: TableCell
              cellType: HeaderCell
              content:
                - type: Paragraph
                  content:
                    - type: Text
                      value:
                        string: Country
                        authorship:
                          - - 1
                            - 0
                            - 0
                            - 7
                  provenance:
                    - type: ProvenanceCount
                      provenanceCategory: Hw
                      characterCount: 7
                      characterPercent: 100
            - type: TableCell
              cellType: HeaderCell
              content:
                - type: Paragraph
                  content:
                    - type: Text
                      value:
                        string: Capital
                        authorship:
                          - - 1
                            - 0
                            - 0
                            - 7
                  provenance:
                    - type: ProvenanceCount
                      provenanceCategory: Hw
                      characterCount: 7
                      characterPercent: 100
            - type: TableCell
              cellType: HeaderCell
              content:
                - type: Paragraph
                  content:
                    - type: Text
                      value:
                        string: Population (millions)
                        authorship:
                          - - 1
                            - 0
                            - 0
                            - 21
                  provenance:
                    - type: ProvenanceCount
                      provenanceCategory: Hw
                      characterCount: 21
                      characterPercent: 100
          rowType: HeaderRow
        - type: TableRow
          cells:
            - type: TableCell
              content:
                - type: Paragraph
                  content:
                    - type: Text
                      value:
                        string: USA
                        authorship:
                          - - 1
                            - 0
                            - 0
                            - 3
                  provenance:
                    - type: ProvenanceCount
                      provenanceCategory: Hw
                      characterCount: 3
                      characterPercent: 100
            - type: TableCell
              content:
                - type: Paragraph
                  content:
                    - type: Text
                      value:
                        string: DC
                        authorship:
                          - - 1
                            - 0
                            - 0
                            - 2
                  provenance:
                    - type: ProvenanceCount
                      provenanceCategory: Hw
                      characterCount: 2
                      characterPercent: 100
            - type: TableCell
              content:
                - type: Paragraph
                  content:
                    - type: Text
                      value:
                        string: "328"
                        authorship:
                          - - 1
                            - 0
                            - 0
                            - 3
                  provenance:
                    - type: ProvenanceCount
                      provenanceCategory: Hw
                      characterCount: 3
                      characterPercent: 100
        - type: TableRow
          cells:
            - type: TableCell
              content:
                - type: Paragraph
                  content:
                    - type: Text
                      value:
                        string: Canada
                        authorship:
                          - - 1
                            - 0
                            - 0
                            - 6
                  provenance:
                    - type: ProvenanceCount
                      provenanceCategory: Hw
                      characterCount: 6
                      characterPercent: 100
            - type: TableCell
              content:
                - type: Paragraph
                  content:
                    - type: Text
                      value:
                        string: Ottawa
                        authorship:
                          - - 1
                            - 0
                            - 0
                            - 6
                  provenance:
                    - type: ProvenanceCount
                      provenanceCategory: Hw
                      characterCount: 6
                      characterPercent: 100
            - type: TableCell
              content:
                - type: Paragraph
                  content:
                    - type: Text
                      value:
                        string: "38"
                        authorship:
                          - - 1
                            - 0
                            - 0
                            - 2
                  provenance:
                    - type: ProvenanceCount
                      provenanceCategory: Hw
                      characterCount: 2
                      characterPercent: 100
new:
  type: Article
  content:
    - type: Table
      rows:
        - type: TableRow
          cells:
            - type: TableCell
              cellType: HeaderCell
              content:
                - type: Paragraph
                  content:
                    - type: Text
                      value:
                        string: Country
            - type: TableCell
              cellType: HeaderCell
              content:
                - type: Paragraph
                  content:
                    - type: Text
                      value:
                        string: Capital
            - type: TableCell
              cellType: HeaderCell
              content:
                - type: Paragraph
                  content:
                    - type: Text
                      value:
                        string: Population (millions)
          rowType: HeaderRow
        - type: TableRow
          cells:
            - type: TableCell
              content:
                - type: Paragraph
                  content:
                    - type: Text
                      value:
                        string: USA
            - type: TableCell
              content:
                - type: Paragraph
                  content:
                    - type: Text
                      value:
                        string: DC
            - type: TableCell
              content:
                - type: Paragraph
                  content:
                    - type: Text
                      value:
                        string: "329"
        - type: TableRow
          cells:
            - type: TableCell
              content:
                - type: Paragraph
                  content:
                    - type: Text
                      value:
                        string: Canada
            - type: TableCell
              content:
                - type: Paragraph
                  content:
                    - type: Text
                      value:
                        string: Ottawa
            - type: TableCell
              content:
                - type: Paragraph
                  content:
                    - type: Text
                      value:
                        string: "38"
merged:
  type: Article
  authors:
    - type: AuthorRole
      author:
        type: Person
        givenNames:
          - Alice
      roleName: Importer
    - type: AuthorRole
      author:
        type: Person
        givenNames:
          - Bob
      roleName: Writer
  provenance:
    - type: ProvenanceCount
      provenanceCategory: Hw
      characterCount: 56
      characterPercent: 98
    - type: ProvenanceCount
      provenanceCategory: HwHe
      characterCount: 1
      characterPercent: 2
  content:
    - type: Table
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Bob
          roleName: Writer
      provenance:
        - type: ProvenanceCount
          provenanceCategory: Hw
          characterCount: 56
          characterPercent: 98
        - type: ProvenanceCount
          provenanceCategory: HwHe
          characterCount: 1
          characterPercent: 2
      rows:
        - type: TableRow
          cells:
            - type: TableCell
              cellType: HeaderCell
              content:
                - type: Paragraph
                  content:
                    - type: Text
                      value:
                        string: Country
                        authorship:
                          - - 1
                            - 0
                            - 0
                            - 7
                  provenance:
                    - type: ProvenanceCount
                      provenanceCategory: Hw
                      characterCount: 7
                      characterPercent: 100
            - type: TableCell
              cellType: HeaderCell
              content:
                - type: Paragraph
                  content:
                    - type: Text
                      value:
                        string: Capital
                        authorship:
                          - - 1
                            - 0
                            - 0
                            - 7
                  provenance:
                    - type: ProvenanceCount
                      provenanceCategory: Hw
                      characterCount: 7
                      characterPercent: 100
            - type: TableCell
              cellType: HeaderCell
              content:
                - type: Paragraph
                  content:
                    - type: Text
                      value:
                        string: Population (millions)
                        authorship:
                          - - 1
                            - 0
                            - 0
                            - 21
                  provenance:
                    - type: ProvenanceCount
                      provenanceCategory: Hw
                      characterCount: 21
                      characterPercent: 100
          rowType: HeaderRow
        - type: TableRow
          cells:
            - type: TableCell
              content:
                - type: Paragraph
                  content:
                    - type: Text
                      value:
                        string: USA
                        authorship:
                          - - 1
                            - 0
                            - 0
                            - 3
                  provenance:
                    - type: ProvenanceCount
                      provenanceCategory: Hw
                      characterCount: 3
                      characterPercent: 100
            - type: TableCell
              content:
                - type: Paragraph
                  content:
                    - type: Text
                      value:
                        string: DC
                        authorship:
                          - - 1
                            - 0
                            - 0
                            - 2
                  provenance:
                    - type: ProvenanceCount
                      provenanceCategory: Hw
                      characterCount: 2
                      characterPercent: 100
            - type: TableCell
              content:
                - type: Paragraph
                  content:
                    - type: Text
                      value:
                        string: "329"
                        authorship:
                          - - 1
                            - 0
                            - 0
                            - 2
                          - - 2
                            - 1
                            - 2
                            - 1
                  provenance:
                    - type: ProvenanceCount
                      provenanceCategory: Hw
                      characterCount: 2
                      characterPercent: 67
                    - type: ProvenanceCount
                      provenanceCategory: HwHe
                      characterCount: 1
                      characterPercent: 33
        - type: TableRow
          cells:
            - type: TableCell
              content:
                - type: Paragraph
                  content:
                    - type: Text
                      value:
                        string: Canada
                        authorship:
                          - - 1
                            - 0
                            - 0
                            - 6
                  provenance:
                    - type: ProvenanceCount
                      provenanceCategory: Hw
                      characterCount: 6
                      characterPercent: 100
            - type: TableCell
              content:
                - type: Paragraph
                  content:
                    - type: Text
                      value:
                        string: Ottawa
                        authorship:
                          - - 1
                            - 0
                            - 0
                            - 6
                  provenance:
                    - type: ProvenanceCount
                      provenanceCategory: Hw
                      characterCount: 6
                      characterPercent: 100
            - type: TableCell
              content:
                - type: Paragraph
                  content:
                    - type: Text
                      value:
                        string: "38"
                        authorship:
                          - - 1
                            - 0
                            - 0
                            - 2
                  provenance:
                    - type: ProvenanceCount
                      provenanceCategory: Hw
                      characterCount: 2
                      characterPercent: 100
ops:
  - - - content
      - 0
      - rows
      - 1
      - cells
      - 2
      - content
      - 0
      - content
      - 0
      - value
    - Apply:
        - Replace:
            - start: 2
              end: 3
            - "9"
